pod.yml
---
apiVersion: v1
kind: Pod
metadata:
  name: thomas-gigout-pod
  labels:
    app: motd
    env: prod
spec:
  containers:
  - name: motd
    image: tgigout/motd-api
