loadbal.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-loadbalancer
spec:
  selector:
    app: motd
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5556
  clusterIP:
  type: LoadBalancer
status:
  loadBalancer:
    ingress:
    - ip:
