service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-service
spec:
  selector:
    app: motd
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5556
